sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:14: error: Unmatched closing brace '}' ignored here
} 
^BasicPancake:18: error: eof expected but '}' found.
}
^